--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-modal": "^3.12.1",
     "sass": "^1.32.2"
   }
 }
